# sheet-music-repetition-highlighter

./: .gitignore  README.md
.claude/: settings.json
.claude/hooks/: setup-worktree.sh
analyzer/: HOMR_MODELS.md  README.md  analyzer.spec  build.sh  cli.py  convert.py  download_homr_models.sh  patterns.py  pyproject.toml  validate.py
analyzer/src/: __init__.py  cli.py  convert.py  patterns.py
analyzer/tests/: test_patterns.py
desktop/: package.json
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/assets/icons/: EyeClosedIcon.tsx  EyeIcon.tsx  HalfMoon.tsx  SeaAndSun.tsx
desktop/src/components/: PatternList.tsx  SheetMusicViewer.tsx  TempoInput.tsx  ThemeToggle.tsx
desktop/src/components/pattern-list/: PatternItem.tsx  PatternList.tsx  PlayButton.tsx  pattern-list.css
desktop/src/components/tooltip/: Tooltip.tsx
desktop/src/components/visibility-toggle/: VisibilityToggle.tsx  visibility-toggle.css
desktop/src/context/: PlaybackContext.tsx  TimeSignatureContext.tsx
desktop/src/utils/: audio.ts  color.ts
music-repetition-highlighter/: package.json
music-repetition-highlighter/src-tauri/: Cargo.toml  tauri.conf.json
music-repetition-highlighter/src-tauri/src/: main.rs
