[project]
name = "analyzer"
version = "0.1.0"
description = "Sheet music repetition analysis"
requires-python = ">=3.11"
dependencies = [
    "homr",
    "music21",
    "onnxruntime>=1.24.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]
