[project]
name = "analyzer"
version = "0.1.0"
description = "Sheet music repetition analysis"
requires-python = ">=3.11"
dependencies = [
    "homr",
    "music21",
    "onnxruntime>=1.24.2",
    "pyinstaller>=6.19.0",
    "pymupdf>=1.27.1",
    "pytest>=9.0.2",
    "relieur",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]

[tool.uv.sources]
relieur = { git = "https://github.com/papoteur-mga/relieur.git" }
